WIP JSONPointer tests.